k8s/manifests/app-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tic-tac-toe
  labels:
    app: tic-tac-toe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tic-tac-toe
  template:
    metadata:
      labels:
        app: tic-tac-toe
    spec:
      containers:
      - name: tic-tac-toe
        image: ghcr.io/gesatessa/devsecops-tic-tac-toe-react:sha-cbf449a87978be56871cb1c57d42d534f79270c0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: github-container-registry
---
apiVersion: v1
kind: Service
metadata:
  name: tic-tac-toe
  labels:
    app: tic-tac-toe
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32123
    protocol: TCP
    name: http
  selector:
    app: tic-tac-toe
